[package]
name = "holani"
version = "0.8.1"
edition = "2021"

[dependencies]
env_logger = { version = "0.11.5", default-features = false, features = [ "auto-color", "humantime", ] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
serde = { version = "1.0", features = ["derive"] }
postcard = {version = "1.0", features = ["experimental-derive"] }
bitflags = { version = "2.6", features = ["serde"] }
md5 = "0.7.0"
lazy_static = "1.5.0"
