[package]
name = "holani"
version = "0.9.6"
edition = "2021"
license-file = "LICENSE"
description = "A cycle-stepped Atari Lynx emulator"
repository = "https://github.com/LLeny/holani"
readme = "README.md"
keywords = ["6502", "atari", "lynx", "emulator"]
categories = ["emulators", "games"]

[dependencies]
env_logger = { version = "0.11.8", default-features = false, features = [
  "auto-color",
  "humantime",
] }
log = { version = "0.4.28", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "alloc",
] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
bitflags = { version = "2.9.1", features = ["serde"] }
md5 = "0.8.0"
lazy_static = "1.5.0"
shared_memory = { version = "0.12", optional = true }
kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007", optional = true }
hashbrown = "0.15.4"
parking_lot = "0.12.4"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[features]
comlynx_shared_memory = ["dep:shared_memory"]
comlynx_external = ["dep:kanal"]

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"